DO-7752 - 1.6 QA [PPP] - Profile page visiblity tool tip icon is not displayed - Fixed.

--- a/src/main/resources/css/gooru-profilepage.css
+++ b/src/main/resources/css/gooru-profilepage.css
@@ -77,7 +77,7 @@
 	height: 20px;
 	cursor: pointer;
 	margin-top: 7px;
-	background: url('images/mos/questionmark.png') no-repeat;
+	background: url('${cdn.endpoint}/images/mos/questionmark.png') no-repeat;
 	margin-left: 5px;
 }
 
